[package]
name = "random-priority-bag"
version = "0.1.0"
edition = "2024"
rust-version = "1.94"
license = "MIT OR Apache-2.0"
categories = ["data-structures", "no-std"]

[dependencies]
parking_lot = { version = "0.12.5", default-features = false, features = ["send_guard"] }
rand = { version = "0.10.0", default-features = false, features = ["alloc"] }
